# justswap.it-backend

./: .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
config/: .env.template
docker/: ci.sh  docker-compose.prod.yml
docs/: conf.py
justswap/: urls.py  wsgi.py
justswap/accounts/: admin.py  apps.py  forms.py  models.py
justswap/accounts/management/commands/: createsu.py
justswap/accounts/migrations/: 0001_initial.py  0002_auto_20180303_1840.py
justswap/accounts/tests/: test_models.py
justswap/main/: apps.py  urls.py  views.py
justswap/main/migrations/: 0001_initial.py
justswap/settings/: __init__.py
justswap/settings/components/: caches.py  common.py  logging.py
justswap/settings/environments/: development.py  production.py
justswap/templates/txt/: humans.txt
sql/: create_database.sql  drop_database.sql
tests/: conftest.py
tests/test_apps/test_main/test_models/: test_blog_post_model.py
tests/test_apps/test_main/test_models/test_migrations/: test_blog_post_migrations.py
tests/test_apps/test_main/test_views/: test_index_view.py
