[build-system]
requires = ["poetry==1.0.5"]
build-backend = "poetry.masonry.api"


[tool.poetry]
name = "justswap"
description = "JustSwap"
version = "0.1.0"
readme = "README.md"
authors = []


[tool.poetry.dependencies]
python = "3.7.7"

# TODO: remove after https://github.com/python-poetry/poetry/issues/2042
importlib-metadata = "<1.2.0,>=1.1.3"

django = "^2.2.11"
django-split-settings = "^1.0"
django-axes = "^5.3"
django-csp = "^3.5"
django-health-check = "^3.11"
django-http-referrer-policy = "^1.0"
django-feature-policy = "^3.1"

djangorestframework = "^3.11.0"
markdown = "^3.2.1"
django-filter = "^2.2.0"

psycopg2-binary = "^2.8"
gunicorn = "^20.0"
python-decouple = "^3.3"
bcrypt = "^3.1"
structlog = "^20.1.0"
arrow = "^0.15.5"
python-dateutil = "^2.8.1"
djoser = "^2.0.3"
djangorestframework_simplejwt = "^4.4.0"
social-auth-app-django = "^3.1.0"
django-cors-headers = "^3.2.1"


[tool.poetry.dev-dependencies]
django-debug-toolbar = "^2.1"
django-querycount = "^0.7"
django-migration-linter = "^2.1"
django-coverage-plugin = "^1.8"
nplusone = "^1.0"

wemake-python-styleguide = "^0.14"
flake8-pytest-style = "^1.0"
flake8-django = "^0.0.4"
nitpick = "^0.21"

pytest = "^5.4"
pytest-django = "^3.7"
pytest-cov = "^2.8"
pytest-randomly = "^3.1"
pytest-deadfixtures = "^2.1"
pytest-testmon = "^1.0"
pytest-timeout = "^1.3"
django-test-migrations = "^0.2"
hypothesis = "^5.8"

mypy = "^0.770"
django-stubs = "^1.4"
djangorestframework-stubs = "^1.1.0"

ipython = "^7.13"

sphinx = "^2.4"
sphinx-autodoc-typehints = "^1.10"
doc8 = "^0.8"

yamllint = "^1.19"
safety = "^1.8"
dotenv-linter = "^0.1"
polint = "^0.4"
dennis = "^0.9"
dump-env = "^1.1"
black = "^19.10b0"


[tool.nitpick]
style = [
  "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml",
  "https://gist.githubusercontent.com/radzak/a4882569909652b5ed738c8d14437b6d/raw/8a4c2d11b7ba9a0afe5841d7b1863a3d1a87c9b4/nitpick-style.toml"
]


[tool.black]
line-length = 88
target-version = ['py37']
